# living_lab_data_processing

./: .env.template  .gitignore  README.md  app.py  app.py.old  db.py  pyproject.toml  requirements.txt  setup.py  ttn-json-parser.py
.github/workflows/: master_imonnit-proc.yml  master_living-lab-proc.yml
NOVUS/: novus_listener.py  novus_sender.py
NOVUS/misc/: csv_merge.py  csv_resample.py
NOVUS/sql/: storedProcedure.sql
SEL/: function.json  sel.py  sel_azure.py
SEL/jupyter/: JSON_Testing.ipynb
SEL/misc/: sel-csv-parser.py  water_data.ipynb
SEL/sql/: createTables.sql  dropProcedures.sql  dropTables.sql  sel_create_tables.sql  sel_drop_procedures.sql  sel_drop_tables.sql  sel_stored_procedures.sql  storedProcedures.sql
TTN/: app.py  ttn-json-parser.py  ttn-listener.service.template  ttn.py
TTN/jupyter/: charts.ipynb
TTN/sql/: create_tables.sql  drop_tables.sql  stored_procedures.sql  ttn_create_tables.sql  ttn_drop_stored_procedures.sql  ttn_drop_tables.sql  ttn_stored_procedures.sql
config/: .apiTokens.json.template
data/: getData.py
iMonnit/: monnit.py
iMonnit/config/: delimeters.txt.template
iMonnit/misc/: get-from-api.py
iMonnit/sql/: STORED_PROCEDURES.sql  monnit_delete_sensor_tables.sql  monnit_reading_stored_procedures.sql  monnit_sensor_data_tables.sql
living_lab_functions/: db.py  functions.py
living_lab_functions.egg-info/: PKG-INFO  SOURCES.txt
monnit/: monnit.py
monnit/config/: sensorColumns.txt.template
monnit/sql/: SENSOR_DATA_TABLES.sql
novus/: novus_listener.py
server/: __init__.py  routes.py  wsgi.py
