[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "living-lab-data-processing"
description = ""
authors = [
	{name = "Ethan Bellmer", email = "e.bellmer@outlook.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = [
	'wheel',
	'flask-basicauth',
	'flask-httpauth',
	'nbformat',
	'pandas',
	'pip-chill',
	'plotly',
	'pyodbc',
	'python-decouple',
	'requests',
	'tqdm',
	'watchdog'
]
classifiers = [
	# How mature is this project? Common values are
	#   3 - Alpha
	#   4 - Beta
	#   5 - Production/Stable
	"Development Status :: 4 - Beta",
	# Indicate who your project is intended for
	"Intended Audience :: Developers",
]